@@ -32,6 +32,10 @@ class LIBCXX_HIDDEN editable_comboboxlayoutmanagerObj::implObj
 	//! Override create_public_object to create the editable_comboboxlayoutmanager.
 
 	layoutmanager create_public_object() override;
+
+	//! Override update_items_if_needed().
+	void update_items_if_needed(std::vector<list_item_param> &items)
+		override;
 };
 
 LIBCXXW_NAMESPACE_END
